[gd_scene load_steps=14 format=2]

[ext_resource path="res://potions/earth_arcane/black_hole/black_hole.gd" type="Script" id=1]
[ext_resource path="res://potions/earth_arcane/black_hole/black_hole.png" type="Texture" id=2]
[ext_resource path="res://potions/earth_arcane/black_hole/vortex.png" type="Texture" id=3]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.010989, 0.208791, 0.763736, 0.879121 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 0.388235, 0.388235, 0.388235, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 100

[sub_resource type="Curve" id=4]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995122, -0.959091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 5
emission_ring_radius = 200.0
emission_ring_inner_radius = 200.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -200.0
scale = 4.0
color_ramp = SubResource( 3 )
hue_variation = -0.64
hue_variation_curve = SubResource( 5 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_curve = SubResource( 9 )
color = Color( 0.215686, 0.0235294, 0.647059, 1 )

[sub_resource type="CircleShape2D" id=10]
radius = 200.0

[node name="BlackHole" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SuckingParticle" type="Particles2D" parent="."]
amount = 100
lifetime = 1.5
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="VortexParticle" type="Particles2D" parent="."]
material = SubResource( 6 )
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 10 )

[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_SelfDestructTimer_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
